--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENI Enchères - Liste des Enchères</title>
-    <link rel="stylesheet" href="/Projet enchères/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">S'inscrire</a>
+                            <a class="nav-link text-white" th:href="@{creation}">S'inscrire</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Se connecter</a>
+                            <a class="nav-link text-white" th:href="@{connexion}">Se connecter</a>
                         </li>
                     </ul>
                 </div>
