--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Projet enchères/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Connexion</title>
 </head>
@@ -15,22 +15,31 @@
         </header>
 
 <!-- Formulaire de connexion -->
-    <form>
+        
+        <div th:if="${param.error}">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}">
+            You have been logged out.
+        </div>
+
+    <form th:action="@{/connexion}" method="post">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Identifiant : </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="identifiant" class="form-label">Identifiant : </label>
+            <input type="text" class="form-control" id="identifiant" name="username" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">Ne divulguer jamais votre identifiant.</div>
         </div>
 
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Mot de passe : </label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label for="password1" class="form-label">Mot de passe : </label>
+            <input type="password" class="form-control" id="password1" name="password" >
         </div>
 
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
         </div>
+        
         <button type="submit" class="btn btn-primary">Connexion</button>
         <a class="password-link" href="#">Mot de passe oublié</a>
         <button type="submit" class="btn btn-primary">Créer un compte</button>
