--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,9 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" th:href="@{creation}">S'inscrire</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" th:href="@{connexion}">Se connecter</a>
-                        </li>
+						<div sec:authorize="not isAuthenticated()">
+                        <li class="nav-item"><a class="nav-link text-white" th:href="@{connexion}">Se connecter</a></li>
+                        </div>
                     </ul>
                 </div>
             </div>
