--- a/src/main/resources/templates/fragment/fragment-entete.html
+++ b/src/main/resources/templates/fragment/fragment-entete.html
@@ -1,33 +1,47 @@
 <!-- Header -->
-        <header th:fragment="frag-entete">
-            <div class="header-title text-center">Eni - Enchères</div>
+<header th:fragment="frag-entete">
+	<div class="header-title text-center">Eni - Enchères</div>
 
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" th:href="@{creation}">S'inscrire</a>
-                        </li>
-                        
-						<div sec:authorize="not isAuthenticated()">
-                        <li class="nav-item"><a class="nav-link text-white" th:href="@{connexion}">Se connecter</a></li>
-                        </div>
-                        
-                        <div sec:authorize="isAuthenticated()">
-							<li class="nav-item">
-					 			<form class="nav-item nav-link text-white" th:action="@{/logout}" method="post">
-	            					<input type="submit" value="Se déconnecter"/>
-	        					</form>
-							</li>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<div class="container">
+			<button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link text-white" th:href="@{creation}">S'inscrire</a>
+					</li>
+
+					<div sec:authorize="not isAuthenticated()">
+						<li class="nav-item"><a class="nav-link text-white" th:href="@{connexion}">Se connecter</a></li>
+					</div>
+
+					<div sec:authorize="isAuthenticated()">
+						<div class="nav-item dropdown">
+							<a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Profil
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<p>Pseudo: <span th:text="${#authentication.name}"></span></p>
+								<li class="nav-item">
+									<form class="nav-item nav-link text-white" th:action="@{/modification}" method="get">
+										<input type="hidden" name="pseudo" th:value="${#authentication.name}" />
+										<input type="submit" value="Afficher profil" />
+									</form>
+									<form class="nav-item nav-link text-white" th:action="@{/logout}" method="post">
+										<input type="submit" value="Se déconnecter" />
+									</form>
+								</li>
+							</div>
 						</div>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        </header>
+					</div>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
