--- a/src/main/resources/templates/profilModification.html
+++ b/src/main/resources/templates/profilModification.html
@@ -16,39 +16,39 @@
 
 <!-- Formulaire création de profil -->
     <div class="container">
-        <h1 class="text-center mt-5">Création du Profil</h1>
+        <h1 class="text-center mt-5">Modification du Profil</h1>
         <form class="row g-3 needs-validation" novalidate>
             <div class="col-md-6">
                 <label for="validationCustom01" class="form-label">Pseudo :</label>
-                <input type="text" class="form-control" id="validationCustom01" required>
+                <input type="text" class="form-control" id="validationCustom01" name="pseudo" th:value="${utilisateur.pseudo}" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom02" class="form-label">Nom :</label>
-                <input type="text" class="form-control" id="validationCustom02" required>
+                <input type="text" class="form-control" id="validationCustom02" name="nom" th:value="${utilisateur.nom}"required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom03" class="form-label">Prénom :</label>
-                <input type="text" class="form-control" id="validationCustom03" required>
+                <input type="text" class="form-control" id="validationCustom03" name="prenom" th:value="${utilisateur.prenom}" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom04" class="form-label">Email :</label>
-                <input type="text" class="form-control" id="validationCustom04" required>
+                <input type="text" class="form-control" id="validationCustom04" name="email" th:value="${utilisateur.email}"required>
                 <div class="invalid-feedback">
                     Please provide a valid email.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom04" class="form-label">Telephone :</label>
-                <input type="text" class="form-control" id="validationCustom05" required>
+                <input type="text" class="form-control" id="validationCustom05" name="telephone" th:value="${utilisateur.telephone}" required>
                 <div class="invalid-feedback">
                     Please provide a valid phone.
                 </div>
@@ -56,35 +56,35 @@
             
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Rue :</label>
-                <input type="text" class="form-control" id="validationCustom06" required>
+                <input type="text" class="form-control" id="validationCustom06" name="rue" th:value="${utilisateur.rue}" required>
                 <div class="invalid-feedback">
                     Please provide a valid street.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Code Postal :</label>
-                <input type="text" class="form-control" id="validationCustom07" required>
+                <input type="text" class="form-control" id="validationCustom07" name="codePostal" th:value="${utilisateur.codePostal}" required>
                 <div class="invalid-feedback">
                     Please provide a valid CP.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Ville :</label>
-                <input type="text" class="form-control" id="validationCustom08" required>
+                <input type="text" class="form-control" id="validationCustom08" name="ville" th:value="${utilisateur.ville}"required>
                 <div class="invalid-feedback">
                     Please provide a valid Town.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Mot de passe :</label>
-                <input type="text" class="form-control" id="validationCustom09" required>
+                <input type="text" class="form-control" id="validationCustom09" name="motDePasse" th:value="${utilisateur.motDePasse}" required>
                 <div class="invalid-feedback">
                     Please provide a valid password.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Confirmation :</label>
-                <input type="text" class="form-control" id="validationCustom10" required>
+                <input type="password" class="form-control" id="validationCustom10" name="motDePasse" th:value="${utilisateur.motDePasse}" required>
                 <div class="invalid-feedback">
                     Please confirm your password.
                 </div>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button class="btn btn-primary me-2" type="submit">Créer</button>
+                <button class="btn btn-primary me-2" type="submit">Modifier</button>
                 <button class="btn btn-secondary" type="button">Annuler</button>
             </div>
         </form>
