--- a/src/main/resources/templates/fragment/fragment-entete.html
+++ b/src/main/resources/templates/fragment/fragment-entete.html
@@ -29,6 +29,9 @@
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<p>Pseudo: <span th:text="${#authentication.name}"></span></p>
 								<li class="nav-item">
+									<form class="nav-item nav-link text-white" th:action="@{/vendre}" method="post">
+										<input type="submit" value="Vendre un article" />
+									</form>
 									<form class="nav-item nav-link text-white" th:action="@{/modification}" method="get">
 										<input type="hidden" name="pseudo" th:value="${#authentication.name}" />
 										<input type="submit" value="Afficher profil" />
