modification profil et role

--- a/src/main/resources/templates/profilModification.html
+++ b/src/main/resources/templates/profilModification.html
@@ -17,7 +17,8 @@
 <!-- Formulaire création de profil -->
     <div class="container">
         <h1 class="text-center mt-5">Modification du Profil</h1>
-        <form class="row g-3 needs-validation" novalidate action="/modification" method="post">
+        <form class="row g-3 needs-validation" th:action="@{/modification}" method="POST" th:object="${utilisateur}" novalidate>
+				<input type="hidden" th:name="noUtilisateur" th:value="${utilisateur.noUtilisateur}">
             <div class="col-md-6">
                 <label for="validationCustom01" class="form-label">Pseudo :</label>
                 <input type="text" class="form-control" id="validationCustom01" name="pseudo" th:value="${utilisateur.pseudo}" required>
@@ -77,14 +78,21 @@
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Mot de passe actuel :</label>
-                <input type="text" class="form-control" id="validationCustom09" name="motDePasse" th:value="${utilisateur.motDePasse}" required>
+                <input type="password" class="form-control" id="validationCustom09" name="motDePasse" th:value="${utilisateur.motDePasse}" required>
+                <div class="invalid-feedback">
+                    Please provide a valid password.
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom06" class="form-label">Nouveau mot de passe :</label>
+                <input type="text" class="form-control" id="validationCustom11" name="motDePasse" required>
                 <div class="invalid-feedback">
                     Please provide a valid password.
                 </div>
             </div>
             <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Confirmation :</label>
-                <input type="password" class="form-control" id="validationCustom10" name="motDePasse" th:value="${utilisateur.motDePasse}" required>
+                <input type="text" class="form-control" id="validationCustom10" name="motDePasse" required>
                 <div class="invalid-feedback">
                     Please confirm your password.
                 </div>
