--- a/src/main/resources/templates/fragment/fragment-entete.html
+++ b/src/main/resources/templates/fragment/fragment-entete.html
@@ -30,7 +30,7 @@
 								<p>Pseudo: <span th:text="${#authentication.name}"></span></p>
 								<li class="nav-item">
 									<form class="nav-item nav-link text-white" th:action="@{/modification}" method="get">
-										<input type="hidden" name="pseudo" th:value="${#authentication.name}" />
+										<input type="hidden" name="noUtilisateur" th:value="${#authentication.principal.noUtilisateur}" />
 										<input type="submit" value="Afficher profil" />
 									</form>
 									<form class="nav-item nav-link text-white" th:action="@{/logout}" method="post">
