--- a/src/main/resources/templates/articleVente.html
+++ b/src/main/resources/templates/articleVente.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" data-th-href="@{/assets/css/style.css}">
+        <link rel="stylesheet" data-th-href="@{/assets/css/vente.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Vente</title>
 </head>
@@ -18,7 +19,7 @@
     <div class="container">
         <h1 class="text-center mt-5">Nouvelle Vente</h1>
 			 
-        <form action="/vendre" method="POST" th:object="${article}" class="row g-3 needs-validation" novalidate>
+        <form action="/vendre" method="POST" th:object="${article}" class="column needs-validation" novalidate>
 			
 			<input type="hidden" th:name="noUtilisateur" th:value="${utilisateur.noUtilisateur}">
 			
@@ -37,8 +38,8 @@
             
             <div class="col-md-6">
 	    		<label for="idCategorieArticle" class="form-label">Catégorie :</label>
-	    		<select id="idCategorieArticle" th:field="*{categorieArticle}">
-	   	 			<option class="form-control" th:each="c : ${categorieSession}" th:text="${c.libelle}" th:value="${c.noCategorie}"></option> 
+	    		<select class="form-control" id="idCategorieArticle" th:field="*{categorieArticle}">
+	   	 			<option selected ="form-control" th:each="c : ${categorieSession}" th:text="${c.libelle}" th:value="${c.noCategorie}"></option> 
 				</select>
 			</div>
 	
@@ -59,12 +60,12 @@
 			</div>
 			
 			<div class="col-md-6">
-				<label for="idDateFinEncheres" class="form-label">Début de l'enchère :</label> 
+				<label for="idDateFinEncheres" class="form-label">Fin de l'enchère :</label> 
 				<input class="form-control" id="idDateFinEncheres" type="datetime-local" required="required" th:field="*{dateFinEncheres}"/>
 			</div>
 			
 			
-			<form action="/vendre" method="POST" th:object="${utilisateur}" class="row g-3 needs-validation" novalidate>
+			<form action="/vendre" method="POST" th:object="${utilisateur}" class="retrait" novalidate>
 			 <legend>Retrait</legend>
 			 <div class="col-md-6">
                 <label for="idRue" class="form-label">Rue :</label>
@@ -86,9 +87,9 @@
 			
             <!-- Include CSRF token -->
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-            <div class="col-12">
-                <button class="btn btn-primary me-2" type="submit">Enregistrer</button>
-                <button class="btn btn-secondary" type="button">Annuler</button>
+            <div class="button">
+                <button class="btn btn-primary me-2 center-block" type="submit">Enregistrer</button>
+                <button class="btn btn-secondary center-block" type="button">Annuler</button>
             </div>
         </form>
     </div>
