--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
         
                 </select>
                 </form> -->
+                </form>-->
 
                 <div class="row row-cols-1 row-cols-md-4 g-4">
                     <!-- Cards -->
