--- a/src/main/resources/templates/profilModification.html
+++ b/src/main/resources/templates/profilModification.html
@@ -20,92 +20,82 @@
 		<!-- Formulaire création de profil -->
 		<div class="container">
 			<h1 class="text-center mt-5">Mon Profil</h1>
-			<form class="row g-3 needs-validation" th:action="@{/modification}" method="POST" th:object="${utilisateur}"
-				novalidate>
-				<input type="hidden" th:name="noUtilisateur" th:value="${utilisateur.noUtilisateur}">
+			<form class="row g-3 needs-validation" th:action="@{/modification}" method="POST" th:object="${utilisateur}" novalidate>
+				<input type="hidden" th:name="noUtilisateur" th:field="*{noUtilisateur}">
 				<div class="col-md-6">
-					<label for="validationCustom01" class="form-label">Pseudo :</label>
-					<input type="text" class="form-control" id="validationCustom01" name="pseudo"
-						th:value="${utilisateur.pseudo}" required>
+					<label for="idPseudo" class="form-label">Pseudo :</label>
+					<input type="text" class="form-control" id="idPseudo" th:field="*{pseudo}" required>
 					<div class="valid-feedback">
 						Looks good!
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom02" class="form-label">Nom :</label>
-					<input type="text" class="form-control" id="validationCustom02" name="nom"
-						th:value="${utilisateur.nom}" required>
+					<label for="idNom" class="form-label">Nom :</label>
+					<input type="text" class="form-control" id="idNom" th:field="*{nom}" required>
 					<div class="valid-feedback">
 						Looks good!
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom03" class="form-label">Prénom :</label>
-					<input type="text" class="form-control" id="validationCustom03" name="prenom"
-						th:value="${utilisateur.prenom}" required>
+					<label for="idPrenom" class="form-label">Prénom :</label>
+					<input type="text" class="form-control" id="idPrenom" th:field="*{prenom}" required>
 					<div class="valid-feedback">
 						Looks good!
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom04" class="form-label">Email :</label>
-					<input type="text" class="form-control" id="validationCustom04" name="email"
-						th:value="${utilisateur.email}" required>
+					<label for="idEmail" class="form-label">Email :</label>
+					<input type="text" class="form-control" id="idEmail" th:field="*{email}" required>
 					<div class="invalid-feedback">
 						Please provide a valid email.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom04" class="form-label">Telephone :</label>
-					<input type="text" class="form-control" id="validationCustom05" name="telephone"
-						th:value="${utilisateur.telephone}" required>
+					<label for="idTelephone" class="form-label">Telephone :</label>
+					<input type="text" class="form-control" id="idTelephone" th:field="*{telephone}" required>
 					<div class="invalid-feedback">
 						Please provide a valid phone.
 					</div>
 				</div>
 
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Rue :</label>
-					<input type="text" class="form-control" id="validationCustom06" name="rue"
-						th:value="${utilisateur.rue}" required>
+					<label for="idRue" class="form-label">Rue :</label>
+					<input type="text" class="form-control" id="idRue"	th:field="*{rue}" required>
 					<div class="invalid-feedback">
 						Please provide a valid street.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Code Postal :</label>
-					<input type="text" class="form-control" id="validationCustom07" name="codePostal"
-						th:value="${utilisateur.codePostal}" required>
+					<label for="idCodePostal" class="form-label">Code Postal :</label>
+					<input type="text" class="form-control" id="idCodePostal" th:field="*{codePostal}" required>
 					<div class="invalid-feedback">
 						Please provide a valid CP.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Ville :</label>
-					<input type="text" class="form-control" id="validationCustom08" name="ville"
-						th:value="${utilisateur.ville}" required>
+					<label for="idVille" class="form-label">Ville :</label>
+					<input type="text" class="form-control" id="idVille" th:field="*{ville}" required>
 					<div class="invalid-feedback">
 						Please provide a valid Town.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Mot de passe actuel :</label>
-					<input type="password" class="form-control" id="validationCustom09" name="motDePasse"
-						th:value="${utilisateur.motDePasse}" required>
+					<label for="idMotDePasse" class="form-label">Mot de passe actuel :</label>
+					<input type="password" class="form-control" id="idMotDePasse" th:value="*{motDePasse}" disabled>
 					<div class="invalid-feedback">
 						Please provide a valid password.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Nouveau mot de passe :</label>
-					<input type="text" class="form-control" id="validationCustom11" name="nouveauMotDePasse" required>
+					<label for="idNewMotDePasse" class="form-label">Nouveau mot de passe :</label>
+					<input type="text" class="form-control" id="idNewMotDePasse" name="nouveauMotDePasse" required>
 					<div class="invalid-feedback">
 						Please provide a valid password.
 					</div>
 				</div>
 				<div class="col-md-6">
-					<label for="validationCustom06" class="form-label">Confirmation :</label>
-					<input type="text" class="form-control" id="validationCustom10" name="confirmationMotDePasse"
+					<label for="idConfMotDePasse" class="form-label">Confirmation :</label>
+					<input type="text" class="form-control" id="idConfMotDePasse" name="confirmationMotDePasse"
 						required>
 					<div class="invalid-feedback">
 						Please confirm your password.
