--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,25 +16,6 @@
             <div class="container">
                 
                 <h1 class="text-center mt-5">Liste des Enchères</h1>
-<<<<<<< HEAD
-
-
-           <!--    <form class="d-flex my-4" th:object="${categorie}" role="search">
-
-                    <input class="form-control me-2" type="search" placeholder="Le nom de l'article contient" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Rechercher</button>
-                </form>
-
-				<!--<form class="d-flex my-4" th:object="${articles}" method="get"></form>
-                <select class="form-select mb-4" th:field="*{categorie}" aria-label="Default select example">
-                    <option selected>Toutes les catégories</option>
-                    <option th:each="c : ${categories}" th:value="${c.noCategorie}" th:text="${c.libelle}"></option>
-                </select>
-<<<<<<< HEAD
-
-                </form>-->
-=======
->>>>>>> gil
                 
                 <table class="table">
 				    <thead>
@@ -51,7 +32,7 @@
 				            <td th:text="${article.nomArticle}">Nom de l'article</td>
 				            <td th:text="${article.prixVente}">Prix</td>
 				            <td th:text="${article.dateFinEncheres}">Fin de l'enchère</td>
-				            <!--<td th:text="${article.pseudo}">Vendeur</td>-->
+				            <td th:text="${article.vendeur.pseudo}">Vendeur</td>
 				            <td>
 				                <a th:href="@{'/details/' + ${article.noArticle}}" class="btn btn-primary">Détails</a>
 				            </td>
@@ -59,29 +40,6 @@
 				    </tbody>
 				</table>
 
-<<<<<<< HEAD
-					<tbody>
-						<!-- th:each : permet de boucler sur tous les Articles et d'afficher autant de tr que d'articles -->
-						<!-- chaque article sera ici placer dans une nouvelle variable a -->
-						<tr th:each="a : ${article}">
-							<td th:text="${a.nomArticle}"></td>
-							<!--<td th:text="${f.annee}"></td>
-							<td th:text="${f.titre}"></td>
-							<td th:text="${f.realisateur.prenom + ' ' + f.realisateur.nom}"></td>
-							<td><a th:href="@{/films/detail(id=${f.id})}">Détail</a>
-								<a th:href="@{/avis/creer(idFilm=${f.id})}">Avis</a>
-							
-							</td>-->
-						</tr>
-					</tbody>
-			
-					</table>
-
-
-=======
-                </form> -->
-                </form>-->
->>>>>>> d848a39b961826ac096ec5df331a3971398b7ab4
 
                 <div class="row row-cols-1 row-cols-md-4 g-4">
                     <!-- Cards -->
@@ -140,8 +98,7 @@
             </div>
 
         </main>
-=======
->>>>>>> gil
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
